# fia-datafortelling

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  _quarto.yml  administrative_enheter.csv  behovsvurdering.qmd  datafortelling_fia.qmd  datafortelling_per_fylke.qmd  datafortelling_per_resultatomrade.qmd  datafortelling_per_resultatområde.qmd  datafortelling_samarbeid.qmd  datafortelling_samarbeidsplan.qmd  datahandler.py  datakvalitet.qmd  fia_agder.qmd  fia_agder_samarbeid.qmd  fia_agder_samarbeidsplan.qmd  fia_innlandet.qmd  fia_innlandet_samarbeid.qmd  fia_innlandet_samarbeidsplan.qmd  fia_more_og_romsdal.qmd  fia_more_og_romsdal_samarbeid.qmd  fia_more_og_romsdal_samarbeidsplan.qmd  fia_nordland.qmd  fia_nordland_samarbeid.qmd  fia_nordland_samarbeidsplan.qmd  fia_norge.qmd  fia_norge_samarbeid.qmd  fia_norge_samarbeidsplan.qmd  fia_oslo.qmd  fia_oslo_samarbeid.qmd  fia_oslo_samarbeidsplan.qmd  fia_ost-viken.qmd  fia_ost-viken_samarbeid.qmd  fia_ost-viken_samarbeidsplan.qmd  fia_rogaland.qmd  fia_rogaland_samarbeid.qmd  fia_rogaland_samarbeidsplan.qmd  (+44 more)
.github/: dependabot.yml
.nais/: alerts.yaml  dev.yaml  nais.yaml  prod.yaml
code/: datahandler.py  helper.py  indicators.py  konstanter.py  plots.py  plots_datakvalitet.py  plots_leveranse.py  plots_statistikk.py  tables.py
datafortellinger/: behovsvurdering.qmd
eksperimenter/: datakvalitet.qmd  endret_prosess.qmd  grafer_om_tid_mellom_statusendringer.ipynb  helsesjekk.qmd  kart.py  kart.qmd  samarbeid.qmd  test_ojs.qmd
ia_tjenester/: agder.qmd  ia_tjenester.qmd  ia_tjenester_agder.qmd  ia_tjenester_innlandet.qmd  ia_tjenester_more_og_romsdal.qmd  ia_tjenester_nordland.qmd  ia_tjenester_norge.qmd  ia_tjenester_oslo.qmd  ia_tjenester_ost-viken.qmd  ia_tjenester_per_resultatomrade.qmd  ia_tjenester_rogaland.qmd  ia_tjenester_troms_og_finnmark.qmd  ia_tjenester_trondelag.qmd  ia_tjenester_vest-viken.qmd  ia_tjenester_vestfold_og_telemark.qmd  ia_tjenester_vestland.qmd  innlandet.qmd  møre_og_romsdal.qmd  nordland.qmd  oslo.qmd  rogaland.qmd  troms_og_finnmark.qmd  trøndelag.qmd  vest-viken.qmd  vestfold_og_telemark.qmd  vestland.qmd  øst-viken.qmd
includes/: _leveranser.qmd  _statusflyt_i_fia_forklaring.qmd  _virksomhetsprofil_forklaring.qmd  begrep-forklaring.qmd  datafortellinger_per_resultatområde.qmd  forenklet-saksgang.qmd  fylkesvise-datafortellinger.qmd  ikke-aktuell-forklaring-før-2023-06-30.qmd  ikke-aktuell-forklaring.qmd  leveransestatus-forklaring.qmd  sak-forklaring.qmd  saksstatus-forklaring.qmd  status-forklaring.qmd  statusflyt_i_fia_forklaring.qmd  under_arbeid_callout.qmd
mermaid/: forenklet-saksgang.qmd  komplett-saksgang.qmd
pages/: ia_tjenester.qmd
resultatområder/: Bergen.qmd  Oslo.qmd  agder.qmd  datafortelling_per_resultatområde.qmd  ia_tjenester_per_resultatområde.qmd  innlandet.qmd  møre_og_romsdal.qmd  nordland.qmd  resultatområde.qmd  rogaland.qmd  troms_og_finnmark.qmd  trøndelag.qmd  (+4 more)
(+121 files in other folders)
