[project]
name = "datafortelling_utils"
version = "0.1.0"
description = "Datafortelling basert på data fra Fia"
authors = [{name="NAV-IT"}]
readme = "README.md"
requires-python = "==3.14.5"
dependencies = [
    "db-dtypes==1.4.4",
    "google-auth==2.53.0",
    "google-cloud-bigquery==3.41.0",
    "ipython==9.13.0",
    "jupyter-client==8.8.0",
    "jupyter-server==2.18.2",
    "logging==0.4.9.6",
    "notebook==7.5.6",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "plotly==6.7.0",
    "requests==2.34.2",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[project.urls]
Repository = "https://github.com/navikt/fia-datafortelling.git"

##### Pytest options
[tool.pytest.ini_options]
addopts = "-ra -q" # reduserer output så lenge alle tester består
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "nbstripout==0.9.1",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
]
