[project]
name = "datafortelling_utils"
version = "0.1.0"
description = "Datafortelling basert på data fra Fia"
authors = [{name="NAV-IT"}]
readme = "README.md"
requires-python = "==3.14.5"
dependencies = [
    "db-dtypes==1.7.0",
    "google-auth==2.55.2",
    "google-cloud-bigquery==3.42.1",
    "ipython==9.15.0",
    "jupyter-client==8.9.1",
    "jupyter-server==2.20.0",
    "logging==0.4.9.6",
    "notebook==7.6.0",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "plotly==6.8.0",
    "requests==2.34.2",
]

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"

[project.urls]
Repository = "https://github.com/navikt/fia-datafortelling.git"

##### Pytest options
[tool.pytest.ini_options]
addopts = "-ra -q" # reduserer output så lenge alle tester består
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "nbstripout==0.9.1",
    "pre-commit==4.6.0",
    "pytest==9.1.1",
]
